[project]
name = "neo"
version = "1.0.0"
description = "Modular, template Discord bot"

authors = [{ name = "xeckt" }]

license = { text = "GNU GPL" }

readme = "README.md"

requires-python = ">=3.10,<3.14"

dependencies = [
    "disnake (>=2.10.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "./bot" }]

[tool.poetry.scripts]
neo = "bot.neo:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.devel.dependencies]
flake8 = "^7.1.1"
