[metadata]
name = YADPS-Chan
version = 0.0.5
description = Bot for the YADPS discord server
long_description = file: README.md

[options]
package_dir=
	=src
	packages=find:

install_requires =
    importlib-metadata; python_version<"3.8"
    asyncpg~=0.24.0
    PyYAML~=6.0
    python-dotenv~=0.19.1
    disnake~=2.4.0
    requests~=2.27.1
    psutil~=5.9.0
    py-cpuinfo~=8.0.0
    schema~=0.7.5
    bs4~=0.0.1
    html5lib~=1.1

[options.extras_require]
# add dependencies not necessarily required to run the bot
dev = # To use this: python -m pip install --editable .[dev]
    pytest
    flake8
    mypy

[options.packages.find]
where=src