[metadata]
name = neo
version = 0.0.5
description = Bot template.
long_description = file: README.md

[options]
package_dir=
	=neo
	packages=

install_requires =
    importlib-metadata; python_version<"3.8"
    asyncpg~=0.30.0
    PyYAML~=6.0.2
    python-dotenv~=1.0.1
    disnake~=2.10.1
    requests~=2.32.3
    psutil~=6.1.1
    py-cpuinfo~=9.0.0
    schema~=0.7.7

[options.extras_require]
# add dependencies not necessarily required to run the bot
dev = # To use this: python -m pip install --editable .[dev]
    pytest
    flake8
    mypy

[options.packages.find]
where=src
